<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.csulb.android.bluetoothmessenger.ChatActivity">


    <ImageView
        android:id="@+id/fullscreen_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/device_connection_status"
        android:textSize="16sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray" />

    <ListView
        android:id="@+id/message_history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_text_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:hint="@string/message_hint"
            android:inputType="textAutoCorrect|textMultiLine" />


        <ImageButton
            android:id="@+id/btn_photo_attach"
            android:layout_width="40dp"
            android:layout_height="56dp"
            android:background="#00000000"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/image_description"
            android:onClick="PhotoMessage"
            android:src="@drawable/ic_attach_file_black_24dp" />

        <ImageButton
            android:id="@+id/btn_photo_add"
            android:layout_width="40dp"
            android:layout_height="56dp"
            android:background="#00000000"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/image_description"
            android:onClick="CameraPhoto"
            android:src="@drawable/ic_add_a_photo_black_24dp" />


        <ImageButton
            android:id="@+id/btn_record"
            android:background="#00000000"
            android:layout_gravity="bottom"
            android:contentDescription="@string/record"
            android:src="@drawable/ic_mic_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="56dp" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/send"
            android:src="@drawable/ic_send_black_24dp"
            android:text="@string/send" />



    </LinearLayout>



</LinearLayout>


